// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node transformer location node 1`] = `
Object {
  "backgroundColor": "black",
  "blocks": Array [
    Object {
      "blocks": Array [
        Object {
          "blocks": Array [
            Object {
              "height": 100,
              "type": "image",
              "url": "./data/images/EmptyImage01.jpg",
              "width": 100,
            },
          ],
          "height": 0,
          "type": "container",
        },
      ],
      "height": 0,
      "type": "container",
    },
    Object {
      "blocks": Array [],
      "height": 0,
      "type": "container",
    },
  ],
  "height": 0,
  "type": "container",
  "width": 1280,
}
`;

exports[`node transformer simple container node 1`] = `
Object {
  "backgroundColor": "black",
  "blocks": Array [
    Object {
      "backgroundColor": "grey",
      "blocks": Array [],
      "height": 100,
      "type": "container",
    },
    Object {
      "backgroundColor": "green",
      "blocks": Array [],
      "height": 1000,
      "type": "container",
    },
  ],
  "flex": "column",
  "height": 1100,
  "type": "container",
  "width": 1280,
}
`;

exports[`node transformer simple leaf node 1`] = `
Object {
  "backgroundColor": "black",
  "blocks": Array [
    Object {
      "height": 100,
      "type": "image",
      "url": "./data/images/EmptyImage01.jpg",
      "width": 100,
    },
  ],
  "height": 0,
  "type": "container",
  "width": 1280,
}
`;
